# CMakePractice

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  compile_commands.json
src/: main.cpp
